#5 19. 애플리케이션 실행 완료